# KIRA-Agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
data/beispielsachverhalte/: 001_mietminderung_schimmel.md
docs/superpowers/plans/: 2026-05-09-legal-sources-tool1.md  2026-05-10-legal-sources-v2-all-laws-and-search.md  2026-05-12-wire-legal-sources-into-agent-loop.md  2026-05-17-phase0-saas-foundation.md
docs/superpowers/specs/: 2026-05-09-legal-sources-tool1-design.md  2026-05-10-legal-sources-v2-all-laws-and-search-design.md  2026-05-12-wire-legal-sources-into-agent-loop-design.md  2026-05-17-phase0-saas-foundation-design.md
infra/cloudflare/juris-proxy/: README.md  worker.js  wrangler.toml
infra/legal_sources/: README.md  app.py  cdk.json  stack.py
scripts/: backfill_corpus.py  finish_backfill.py  finish_backfill_local.py  invoke_legal_lambdas.py  legal_sources_smoke.py  register_gateway_target.py  repair_abkuerzungen.py
src/kira/: __init__.py  cli.py
src/kira/agent/: __init__.py  core.py  legal_client.py  system_prompts.py
src/kira/knowledge/: ingest.py  loader.py  schema.py  xml_parser.py
src/kira/llm/: __init__.py  client.py  models.py
src/kira/pseudonymizer/: __init__.py  leakage_check.py  mapping_store.py  pipeline.py
src/kira/router/: __init__.py  classifier.py  policy.py  rule_based.py
tests/: test_cli.py  test_pseudonymizer.py  test_router.py  test_tools.py  test_xml_parser.py
tests/agent/: test_end_to_end.py  test_legal_client.py  test_legal_client_live.py  test_system_prompts.py
tests/infra/: test_region_pin.py
(+57 files in other folders)
