[project]
name = "kira-agent"
version = "0.1.0"
description = "KIRA – KI-Rechtsanwaltsassistent für deutsches Mietrecht (Junior-Associate-Pattern)"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
  "anthropic[bedrock]>=0.40.0",
  "boto3>=1.34.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "python-dateutil>=2.9.0",
  "rich>=13.7.0",
  "typer>=0.12.0",
  "cryptography>=42.0.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.1.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
nlp = [
  "presidio-analyzer>=2.2.0",
  "presidio-anonymizer>=2.2.0",
  "spacy>=3.7.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
]

[project.scripts]
kira = "kira.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
